I guess Files.lines doesn't work